--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.3.0",
     "fs": "^0.0.1-security",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "postgres": "^1.0.2"
   },
@@ -32,8 +35,11 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jasmine": "^3.10.3",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.7",
     "@types/nodemon": "^1.19.1",
     "@types/pg": "^8.6.3",
