--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "up": "npx db-migrate up",
-    "test": "ENV=test db-migrate --env test up && npm run build && npm run jasmine && db-migrate --env test reset"
+    "test": "ENV=test db-migrate --env test up && npm run build && npm run jasmine && db-migrate --env"//don't forget test reset
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +23,6 @@
     "express-rate-limit": "^6.1.0",
     "express-requests-logger": "^3.0.4",
     "express-validator": "^6.14.0",
-    "fs": "^0.0.1-security",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
