--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "up": "npx db-migrate up",
-    "test": "ENV=test db-migrate --env test up && npm run build && npm run jasmine && db-migrate --env test reset" 
+    "test": "ENV=test db-migrate --env test up && npm run build && npm run jasmine && db-migrate --env"
   },
   "author": "",
   "license": "ISC",
@@ -46,12 +46,17 @@
     "@types/nodemon": "^1.19.1",
     "@types/pg": "^8.6.4",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "jasmine": "^4.0.1",
     "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.4.0",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "yamljs": "^0.3.0"
   }
 }
